tests/frontend/pass/strings.act
constructor of C
interface constructor()

creates

    string str := "Hello world!"