tests/frontend/fail/emptystorage/varexp.act
constructor of LValue
interface constructor()

creates

    uint x := true and x
    
invariants

    x == 0
